--- a/My_Theme_Collection/No_Game_No_Life.theme.css
+++ b/My_Theme_Collection/No_Game_No_Life.theme.css
@@ -610,6 +610,7 @@
     box-shadow: none;
 }
 
+
 .theme-dark .messageGroupWrapper-o-Zw7G {
     border: none;
     background-color: rgba(0, 0, 0, 0.3);
@@ -1336,15 +1337,14 @@
     box-shadow: none;
 }
 
-#bda-qem button:hover {
-    background-color: #582060;
-}
-
 .emojiPicker-3m1S-j .categories-1feg4n {
     background: none;
 }
 
 
+#bda-qem button:hover {
+    background-color: #582060;
+}
 
 #bda-qem button.active {
     background-color: #901E50 !important;
@@ -1446,7 +1446,7 @@
     border-radius: 13px;
 }
 
-.attachWrapper-1_D-pj {
+.attachWrapper-2TRKBi {
 	border: none;
 }
 
@@ -1454,7 +1454,7 @@
     background-color: transparent;
 }
   
-.scrollableContainer-38zsVD {
+.scrollableContainer-2NUZem {
     background: linear-gradient(230deg, #582060 0%, #3D1E59 100%);
     border: 2px solid #901E50;
     background-attachment: fixed;
@@ -1539,23 +1539,24 @@
     color: white;
 }
 
-.uploadModal-2ifh8j {
+.theme-dark .uploadModal-2ifh8j {
     background-color: #3D1E59;
     border-radius: 13px;
 }
+
 .theme-dark .footer-3mqk7D {
     box-shadow: none;
 }
 
-.uploadModal-2ifh8j .footer-3mqk7D {
+.theme-dark .uploadModal-2ifh8j .footer-3mqk7D {
     background-color: transparent;
 }
 
-.uploadModal-2ifh8j .inner-3nWsbo {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo {
     border: none;
 }
 
-.uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
     margin-top: -53px;
     width: 134px;
     height: 134px;
@@ -2305,10 +2306,10 @@
 
 /* Private Calls */
 
-
 .bg-h5JY_x {
     background-color: transparent;
   }
+
 
 
 .color-primary-0 { background-color: #582060 rgb(88, 32, 96) }	/* Main Primary Color */
