--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -862,7 +862,7 @@
     border: none;
 }
 
-.attachWrapper-1_D-pj {
+.attachWrapper-2TRKBi {
 	border: none;
 }
 
@@ -1419,21 +1419,17 @@
     box-shadow: none;
 }
 
-#bda-qem button:hover {
-    background-color: #7f2542;
-}
-
 .emojiPicker-3m1S-j .categories-1feg4n {
     background: none;
 }
 
 
-#bda-qem button.active {
-    background-color: #731838 !important;
+#bda-qem button:hover {
+    background-color: #7f2542;
 }
 
-.infoBar-U6oBFk {
-    background: none;
+#bda-qem button.active {
+    background-color: #731838 !important;
 }
 
 .emojiPicker-3m1S-j,
@@ -1442,12 +1438,15 @@
 	background-color: #4d1627;
 }
 
+.infoBar-U6oBFk {
+    background: none;
+}
+
 .emojiPicker-3m1S-j {
 	border: none;
 	box-shadow: none;
 	border-radius: 2px;
 }
-
 
 
 .emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
@@ -1489,29 +1488,28 @@
     background-color: transparent;
 }
   
-.scrollableContainer-38zsVD {
+.scrollableContainer-2NUZem {
     background: linear-gradient(270deg, #731838 0%, transparent 82%);
 }
-
-
+  
 
 /* Upload Stuff */
-.uploadModal-2ifh8j {
+.theme-dark .uploadModal-2ifh8j {
     background-color: #4d1627;
 }
 .theme-dark .footer-3mqk7D {
     box-shadow: none;
 }
 
-.uploadModal-2ifh8j .inner-3nWsbo {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo {
     border: 2px dashed #731838;
 }
 
-.uploadModal-2ifh8j .footer-3mqk7D {
+.theme-dark .uploadModal-2ifh8j .footer-3mqk7D {
     background: none;
 }
 
-.uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
     margin-top: -53px;
     width: 134px;
     height: 134px;
