--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -11,6 +11,11 @@
     background-size: cover;
 }
 
+.placeholder-37qJjk, 
+.slateTextArea-1Mkdgw .hljs-comment, 
+.slateTextArea-1Mkdgw .hljs-quote {
+    color: white;
+}
 
 .theme-dark .layer-3QrUeG,
 .sidebar-2K8pFh,
@@ -535,25 +540,22 @@
     border: none;
 }
 
-.uploadModal-2ifh8j .footer-3mqk7D {
+.theme-dark .uploadModal-2ifh8j .footer-3mqk7D {
     background-color: transparent;
     padding: 13px;
 }
-.theme-dark .footer-3mqk7D {
-    box-shadow: none;
-}
 
-.uploadModal-2ifh8j .inner-3nWsbo {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo {
     border: none;
 }
   
-.uploadModal-2ifh8j {
+.theme-dark .uploadModal-2ifh8j {
     background: linear-gradient(45deg, #f4acc5 0%, black 40%);
     background-size: cover;
     border-radius: 5px;
 }
 
-.uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
     background-color: #f4acc5
     border: 3px solid black;
     border-radius: 10%;
@@ -568,7 +570,7 @@
     color: white;
 }
 
-.uploadModal-2ifh8j .footer-3mqk7D .lookLink-9FtZy-.colorWhite-rEQuAQ:hover {
+.theme-dark .uploadModal-2ifh8j .footer-3mqk7D .lookLink-9FtZy-.colorWhite-rEQuAQ:hover {
     background-color: rgba(255,0,0,0.6);
 }
 
@@ -1704,11 +1706,7 @@
     margin-right: 3px;
     background-color: rgba(255,255,255,.089);
 }
-.placeholder-P6ptfj, 
-.slateTextArea-1bp44y .hljs-comment, 
-.slateTextArea-1bp44y .hljs-quote {
-    color: white;
-}
+
 .markup-2BOw-j,
 .headerCozyMeta-rdohGq {
     color: white;
@@ -1763,15 +1761,16 @@
     border-color: transparent;
 }
 
-.attachWrapper-1_D-pj {
+.attachWrapper-2TRKBi {
 	border: none;
 }
+
 
 .theme-dark .inner-zqa7da {
     background-color: transparent;
 }
   
-.scrollableContainer-38zsVD {
+.scrollableContainer-2NUZem {
     background: linear-gradient(to right, rgba(244, 172, 197, 0.44) 0%, rgba(0, 0, 0, 0.25) 100%);
 }
 
@@ -1788,16 +1787,16 @@
     border: none;
 }
 
-.uploadModal-2ifh8j .footer-3mqk7D {
+.theme-dark .uploadModal-2ifh8j .footer-3mqk7D {
     background-color: transparent;
     padding: 13px;
 }
 
-.uploadModal-2ifh8j .inner-3nWsbo {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo {
     border: none;
 }
 
-.uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
     border: none;
     border-radius: 30px;
 }
@@ -1985,7 +1984,7 @@
     background-color: rgba(0, 0, 0, 0.33);
 }
 
-.activity-2Gy-9S {
+.activity-E-0FeD {
     color: white;
 }
 
@@ -2095,14 +2094,14 @@
     box-shadow: none;
 }
 
-#bda-qem button:hover {
-    background-color: #f4acc5;
-}
-
 .emojiPicker-3m1S-j .categories-1feg4n {
     background: none;
 }
 
+
+#bda-qem button:hover {
+    background-color: #f4acc5;
+}
 
 #bda-qem button.active {
     background-color: #f4acc5 !important;
@@ -2186,8 +2185,6 @@
 .bg-h5JY_x {
     background-color: transparent;
   }
-
 /* Main Color */
 .color-primary { #f4acc5  rgba(244, 172, 197, 1.0); }
 /* Main Color */ 
-
