--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -9,6 +9,11 @@
     background-size: cover;
 }
 
+.placeholder-37qJjk, 
+.slateTextArea-1Mkdgw .hljs-comment, 
+.slateTextArea-1Mkdgw .hljs-quote {
+    color: white;
+}
 
 .theme-dark .layer-3QrUeG,
 .sidebar-2K8pFh,
@@ -532,26 +537,23 @@
 .uploadArea-3QgLtW .uploadDropModal-2kTwbc .inner-3nWsbo {
     border: none;
 }
-.theme-dark .footer-3mqk7D {
-    box-shadow: none;
-}
 
-.uploadModal-2ifh8j .footer-3mqk7D {
+.theme-dark .uploadModal-2ifh8j .footer-3mqk7D {
     background-color: transparent;
     padding: 13px;
 }
 
-.uploadModal-2ifh8j .inner-3nWsbo {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo {
     border: none;
 }
   
-.uploadModal-2ifh8j {
+.theme-dark .uploadModal-2ifh8j {
     background: linear-gradient(45deg, #8da0e0 0%, black 40%);
     background-size: cover;
     border-radius: 5px;
 }
 
-.uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
     background-color: #8da0e0
     border: 3px solid black;
     border-radius: 10%;
@@ -566,7 +568,7 @@
     color: white;
 }
 
-.uploadModal-2ifh8j .footer-3mqk7D .lookLink-9FtZy-.colorWhite-rEQuAQ:hover {
+.theme-dark .uploadModal-2ifh8j .footer-3mqk7D .lookLink-9FtZy-.colorWhite-rEQuAQ:hover {
     background-color: rgba(255,0,0,0.6);
 }
 
@@ -1699,11 +1701,6 @@
     margin-right: 3px;
     background-color: rgba(255,255,255,.089);
 }
-.placeholder-P6ptfj, 
-.slateTextArea-1bp44y .hljs-comment, 
-.slateTextArea-1bp44y .hljs-quote {
-    color: white;
-}
 
 .markup-2BOw-j,
 .headerCozyMeta-rdohGq {
@@ -1759,18 +1756,20 @@
     border-color: transparent;
 }
 
-.attachWrapper-1_D-pj {
+.attachWrapper-2TRKBi {
 	border: none;
 }
+
 
 
 .theme-dark .inner-zqa7da {
     background-color: transparent;
 }
   
-.scrollableContainer-38zsVD {
+.scrollableContainer-2NUZem {
     background: linear-gradient(to right, rgba(142, 161, 224, 0.44) 0%, rgba(0, 0, 0, 0.25) 100%);
 }
+
 
 .uploadArea-3QgLtW {
     background: rgba(0,0,0,.8);
@@ -1785,16 +1784,16 @@
     border: none;
 }
 
-.uploadModal-2ifh8j .footer-3mqk7D {
+.theme-dark .uploadModal-2ifh8j .footer-3mqk7D {
     background-color: transparent;
     padding: 13px;
 }
 
-.uploadModal-2ifh8j .inner-3nWsbo {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo {
     border: none;
 }
 
-.uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
+.theme-dark .uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
     border: none;
     border-radius: 30px;
 }
@@ -1982,7 +1981,7 @@
     background-color: rgba(0, 0, 0, 0.33);
 }
 
-.activity-2Gy-9S {
+.activity-E-0FeD {
     color: white;
 }
 
@@ -2092,14 +2091,14 @@
     box-shadow: none;
 }
 
-#bda-qem button:hover {
-    background-color: #8da0e0;
-}
-
 .emojiPicker-3m1S-j .categories-1feg4n {
     background: none;
 }
 
+
+#bda-qem button:hover {
+    background-color: #8da0e0;
+}
 
 #bda-qem button.active {
     background-color: #8da0e0 !important;
@@ -2174,7 +2173,6 @@
     border: 1px solid rgba(255, 255, 255, 0.41);
 }
 /* -- */
-
 .bg-h5JY_x {
     background-color: transparent;
   }
